--- a/.github/workflows/build-docker-test.yml
+++ b/.github/workflows/build-docker-test.yml
@@ -24,14 +24,17 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
       - name: Build builder
         uses: docker/build-push-action@v2
         with:
           context: ./
           file: ./test-builder.dockerfile
+          builder: ${{ steps.buildx.outputs.name }}
           push: false
-          load: true
-          tags: geoflow3d/test-builder:latest, geoflow3d/test-builder:${{ github.ref_name }}
+          load: false
+          target: geoflow3d/test-builder:latest
 #      - name: inspect
 #        run: |
 #          docker image inspect geoflow3d/test-builder:latest
@@ -40,6 +43,7 @@ jobs:
         with:
           context: ./
           file: ./test-app.dockerfile
+          builder: ${{ steps.buildx.outputs.name }}
           push: false
           load: false
           tags: geoflow3d/test-app:${{ github.ref_name }}
