--- a/.github/workflows/build-docker-test.yml
+++ b/.github/workflows/build-docker-test.yml
@@ -31,12 +31,12 @@ jobs:
         with:
           context: ./
           file: ./test-builder.dockerfile
-          builder: ${{ steps.buildx.outputs.name }}
           push: false
           load: true
           tag: geoflow3d/test-builder:latest
       - name: inspect
         run: |
+          docker image inspect geoflow3d/test-builder:latest
           docker build --tag geoflow3d/test-app:1 --file test-app.dockerfile .
           docker image save --output test-app-1-docker.tar geoflow3d/test-app:1
 
