--- a/.github/workflows/build-docker-test.yml
+++ b/.github/workflows/build-docker-test.yml
@@ -31,6 +31,7 @@ jobs:
         with:
           context: ./
           file: ./test-builder.dockerfile
+          builder: ${{ steps.buildx.outputs.name }}
           push: false
           load: true
           tags: geoflow3d/test-builder:latest
