--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
 # Jetbrains IDE
 .idea
 .run
+
+# VS build dirs
+/geoflow/build/
+/geoflow/out/
+/plugins/*/out/
+/plugins/*/build/
+/.vs/
+
+# Test
+/test_plugin/build/
+
+# Build
+build
