--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -139,7 +139,7 @@ jobs:
           path: build/Geoflow-cli-*-${{ matrix.exe_os }}.${{ matrix.exe_ext }}
           retention-days: 1
 
-  build-docker:
+  build-docker-lod13tool:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -176,9 +176,46 @@ jobs:
           path: lod13tool-${{ github.ref_name }}-docker.tar
           retention-days: 1
 
+  build-docker-brecon:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: recursive
+          token: ${{ secrets.GH_PAT }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Build builder
+        uses: docker/build-push-action@v2
+        with:
+          context: ./
+          file: ./builder.dockerfile
+          builder: ${{ steps.buildx.outputs.name }}
+          build-args: |
+            JOBS=2
+            VERSION=${{ github.ref_name }}
+          push: false
+          load: true
+          tags: geoflow3d/geoflow-bundle-builder:latest
+      - name: Build brecon
+        run: |
+          docker build --tag geoflow3d/brecon:${{ github.ref_name }} --file brecon.dockerfile .
+          docker save --output brecon-${{ github.ref_name }}-docker.tar geoflow3d/brecon:${{ github.ref_name }}
+      - name: Upload docker image
+        uses: actions/upload-artifact@v3
+        with:
+          name: brecon-docker
+          path: brecon-${{ github.ref_name }}-docker.tar
+          retention-days: 1
+
   release:
     runs-on: ubuntu-latest
-    needs: [build-exe, build-exe-cli, build-docker]
+    needs: [build-exe, build-exe-cli, build-docker-lod13tool, build-docker-brecon]
     steps:
       - uses: actions/download-artifact@v3
         with:
