--- a/cmake/lod22-reconstruct.bat.in
+++ b/cmake/lod22-reconstruct.bat.in
@@ -1,2 +1,3 @@
-echo "Automatically loading flowchart @CMAKE_INSTALL_PREFIX@/share/geoflow/gfc-brecon/single/reconstruct.json"
-@CMAKE_INSTALL_PREFIX@/bin/geof @CMAKE_INSTALL_PREFIX@/share/geoflow/gfc-brecon/single/reconstruct.json %*
+@ECHO OFF
+ECHO Automatically loading flowchart %GF_INSTALL_ROOT%\share\geoflow\gfc-brecon\single\reconstruct.json
+geof "%GF_INSTALL_ROOT%\share\geoflow\gfc-brecon\single\reconstruct.json" %*
