udate cpack code for build without gui

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,8 +44,10 @@ set(CPACK_PACKAGE_HOMEPAGE_URL "https://github.com/geoflow3d/geoflow-bundle")
 # set(CPACK_RESOURCE_FILE_WELCOME "{CMAKE_SOURCE_DIR}/geoflow/LICENSE")
 set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/geoflow/COPYING")
 set(CPACK_MONOLITHIC_INSTALL TRUE)
-set(CPACK_PACKAGE_EXECUTABLES "geoflow;Geoflow")
-SET(CPACK_CREATE_DESKTOP_LINKS "geoflow" )
+if (GF_BUILD_GUI)
+  set(CPACK_PACKAGE_EXECUTABLES "geoflow;Geoflow")
+  SET(CPACK_CREATE_DESKTOP_LINKS "geoflow" )
+endif (GF_BUILD_GUI)
 set(CPACK_THREADS 0)
 
 if (WIN32)
@@ -54,7 +56,9 @@ if (WIN32)
   set(CPACK_NSIS_MODIFY_PATH ON)
   # set(CPACK_NSIS_ENABLE_UNINSTALL_BEFORE_INSTALL ON)
   set(CPACK_NSIS_MUI_ICON "${CMAKE_SOURCE_DIR}/geoflow/apps/resources/geoflow.ico")
-  set(CPACK_NSIS_INSTALLED_ICON_NAME bin\\\\geoflow.exe)
+  if (GF_BUILD_GUI)
+    set(CPACK_NSIS_INSTALLED_ICON_NAME bin\\\\geoflow.exe)
+  endif (GF_BUILD_GUI)
   include(InstallRequiredSystemLibraries)
 
   INSTALL(FILES ${CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS} DESTINATION bin COMPONENT Libraries)
