alter windows cli installer name to match what gh actions expects

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,11 @@ else()
   install(PROGRAMS ${CMAKE_BINARY_DIR}/lod22-reconstruct.sh DESTINATION bin RENAME lod22-reconstruct)
 endif(WIN32)
 
-set(CPACK_PACKAGE_NAME "Geoflow")
+if (GF_BUILD_GUI)
+  set(CPACK_PACKAGE_NAME "Geoflow")
+else ()
+  set(CPACK_PACKAGE_NAME "Geoflow-cli")
+endif (GF_BUILD_GUI)
 set(CPACK_PACKAGE_VENDOR "3DGI")
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Geoflow - Software")
 set(CPACK_PACKAGE_VERSION ${CMAKE_PROJECT_VERSION})
