try GITHUB_TOKEN instead of PAT

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -230,4 +230,4 @@ jobs:
           draft: true
           prerelease: true
           fail_on_unmatched_files: true
-          token: ${{ secrets.GH_PAT }}
+          token: ${{ secrets.GITHUB_TOKEN }}
