--- a/.github/workflows/build-docker-builder.yml
+++ b/.github/workflows/build-docker-builder.yml
@@ -1,17 +1,16 @@
-name: Docker Base Image
+name: Docker Builder Image
 
 on:
   push:
-    branches: [ master ]
-    paths: [ 'base.dockerfile' ]
+    tags:
+      - '202[2-9].[0-9]+.[0-9]+'
+    paths-ignore:
+      - '**.md'
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Get current date
-        id: date
-        run: echo "::set-output name=date::$(date +'%Y.%m.%d')"
       - uses: actions/checkout@v3
         with:
           submodules: recursive
@@ -26,12 +25,12 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: ./
-          file: ./base.dockerfile
+          file: ./builder.dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           build-args: |
             JOBS=2
-            VERSION=${{ steps.date.outputs.date }}
+            VERSION=${{ github.ref_name }}
           push: true
-          tags: 3dgi/geoflow-bundle-base:${{ steps.date.outputs.date }}
-          cache-from: type=registry,ref=3dgi/geoflow-bundle-base:buildcache
-          cache-to: type=registry,ref=3dgi/geoflow-bundle-base:buildcache,mode=max
+          tags: 3dgi/geoflow-bundle-builder:${{ github.ref_name }}
+          cache-from: type=registry,ref=3dgi/geoflow-bundle-builder:buildcache
+          cache-to: type=registry,ref=3dgi/geoflow-bundle-builder:buildcache,mode=max
